[package]
name = "libturms"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = "0.11"
jsonwebtoken = "9.3.0"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
url = "2.5"
# Async support.
tokio-tungstenite = "0.24.0"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
futures-util = "0.3"

[dev-dependencies]
regex-lite = "0"
tokio = { version = "1.43", features = ["full"] }
