[package]
name = "discover"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
webrtc = "0.13.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures-util = "0.3"
tracing = "0.1"
error = { path = "../error" }

[dev-dependencies]
regex-lite = "0"
