[package]
name = "error"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"

# crates used by libs.
# version is automatically selected by builder from libs.
serde_json = { workspace = true }
serde_yaml = "*"
jsonwebtoken = { workspace = true }
url = "*"
tungstenite = { workspace = true }
reqwest = "0.12"
webrtc = { workspace = true }
