[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = "0.1"
webrtc = "0.13"
bitflags = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
error = { path = "../error" }
