[package]
name = "p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = "0.1"
webrtc = { workspace = true }
bitflags = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
error = { path = "../error" }
vodozemac = "0.9"
bytes = "1.10"
parking_lot = "0.12"
